created a csv file for reddit posts

--- a/Orangetheory's Customer Sentiment on Lift45 and Heart Rate Metrics.ipynb
+++ b/Orangetheory's Customer Sentiment on Lift45 and Heart Rate Metrics.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccafcb1d",
+   "id": "cc9fa88a",
    "metadata": {},
    "source": [
     "## Setup for Extracting Reddit posts and comments"
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3489c18",
+   "id": "b1669653",
    "metadata": {},
    "source": [
     "# Customer Sentiment about Lift45:\n",
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "26b1b741",
+   "id": "6ed707cf",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "8211e1e5",
+   "id": "d129be3e",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "683b71bc",
+   "id": "1e236c09",
    "metadata": {},
    "source": [
     "## Determine categories of feedback based on last week's posts and comments"
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "5e4886e5",
+   "id": "999db8c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "17dcb278",
+   "id": "f928c215",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "c4682010",
+   "id": "053194d3",
    "metadata": {
     "scrolled": true
    },
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e4c6dc6",
+   "id": "055f7177",
    "metadata": {},
    "source": [
     "### Original list of 10 categories\n",
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5fe7645",
+   "id": "dd7b4aea",
    "metadata": {},
    "source": [
     "### Narrowing down categories that are too similar:\n",
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6aa7bb3",
+   "id": "bdc564d5",
    "metadata": {},
    "source": [
     "## Writing a prompt for creating a list of posts and comments that are about customer sentiment of Lift45"
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25a425dc",
+   "id": "f9e7b3ac",
    "metadata": {},
    "source": [
     "### Using the first 10 posts and comments for testing the prompt"
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "eb180e9e",
+   "id": "7ce593b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "737f711a",
+   "id": "051f4934",
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c671a85b",
+   "id": "83b3e0ca",
    "metadata": {},
    "source": [
     "<!-- Example post for posts that do not contain customer sentiment, compliments, criticisms, and feedback:\n",
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "616abc7e",
+   "id": "54d91e4d",
    "metadata": {},
    "source": [
     "### Prompt Template for Lift45 on Reddit"
@@ -491,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "37dedc7e",
+   "id": "786e7850",
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5289ae8",
+   "id": "9fa26605",
    "metadata": {},
    "source": [
     "## Fetching all Reddit posts, comments, and replies about Lift45 from the last 3 months"
@@ -703,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": 194,
-   "id": "55ab79a9",
+   "id": "be24226b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 195,
-   "id": "43a610e1",
+   "id": "7977ab67",
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +754,7 @@
   {
    "cell_type": "code",
    "execution_count": 196,
-   "id": "c6a35099",
+   "id": "99cb883e",
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": 193,
-   "id": "0436684e",
+   "id": "c4c6a993",
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "80fb0615",
+   "id": "6e2004e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55fc5eca",
+   "id": "995a6dbf",
    "metadata": {},
    "source": [
     "### Running the prompt with ThreeMonthPosts_Lift45"
@@ -818,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "2d8ebf0f",
+   "id": "e942704f",
    "metadata": {},
    "outputs": [
     {
@@ -2866,7 +2866,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81603843",
+   "id": "2dabaa9f",
    "metadata": {},
    "source": [
     "#### Since the server was overloaded, the list ThreeMonthPosts_Lift45 was cut to run the remaining posts."
@@ -2875,7 +2875,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "830cae62",
+   "id": "859a4ae0",
    "metadata": {},
    "outputs": [
     {
@@ -2904,7 +2904,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "00cb80ef",
+   "id": "5bff1958",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2914,7 +2914,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "b9b33b5e",
+   "id": "c239a755",
    "metadata": {
     "scrolled": true
    },
@@ -4842,7 +4842,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8f47f5f",
+   "id": "26684fc4",
    "metadata": {},
    "source": [
     "#### Again, since the server was overloaded, the list ThreeMonthPosts_Lift45 was cut to run the remaining posts."
@@ -4851,7 +4851,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "067a249e",
+   "id": "9ad8da33",
    "metadata": {},
    "outputs": [
     {
@@ -4880,7 +4880,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "3253a9c1",
+   "id": "6f473281",
    "metadata": {
     "scrolled": true
    },
@@ -7302,7 +7302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b900374",
+   "id": "46bbb1c3",
    "metadata": {},
    "source": [
     "#### Again, since the server was overloaded, the list ThreeMonthPosts_Lift45 was cut to run the remaining posts."
@@ -7311,7 +7311,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "61eb141a",
+   "id": "43db194c",
    "metadata": {},
    "outputs": [
     {
@@ -7340,7 +7340,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "e1097087",
+   "id": "c3051334",
    "metadata": {},
    "outputs": [
     {
@@ -8375,7 +8375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82bebde0",
+   "id": "9ed4ece1",
    "metadata": {},
    "source": [
     "### Converting the json_objects (Lift45 posts) into a DataFrame"
@@ -8384,7 +8384,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "d92f362f",
+   "id": "ffac6fa6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8394,7 +8394,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "ee68939b",
+   "id": "9bfb0309",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8405,7 +8405,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "5e555843",
+   "id": "343866b8",
    "metadata": {
     "scrolled": true
    },
@@ -8674,7 +8674,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "270564dc",
+   "id": "cae487e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8684,7 +8684,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87a02e0b",
+   "id": "b2b0fd85",
    "metadata": {},
    "source": [
     "# Customer Sentiment about HR and Splats"
@@ -8692,7 +8692,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf9c9259",
+   "id": "067dbfff",
    "metadata": {},
    "source": [
     "## Fetching all Reddit posts, comments, and replies about HR Metrics from the last two days"
@@ -8701,7 +8701,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "0355786d",
+   "id": "22dbc1ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8712,7 +8712,7 @@
   {
    "cell_type": "code",
    "execution_count": 218,
-   "id": "b793acf7",
+   "id": "2d07ee44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8739,7 +8739,7 @@
   {
    "cell_type": "code",
    "execution_count": 219,
-   "id": "7f38a49a",
+   "id": "e123b462",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8751,7 +8751,7 @@
   {
    "cell_type": "code",
    "execution_count": 220,
-   "id": "f8a8952c",
+   "id": "e0dec744",
    "metadata": {},
    "outputs": [
     {
@@ -8771,7 +8771,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "868ebf72",
+   "id": "2baf2a04",
    "metadata": {},
    "source": [
     "### Top 5 positive and negative topics about splat points, max HR, and heart rate zones from the last 2 days"
@@ -8780,7 +8780,7 @@
   {
    "cell_type": "code",
    "execution_count": 222,
-   "id": "ce4ce347",
+   "id": "f9a74590",
    "metadata": {
     "scrolled": true
    },
@@ -8839,7 +8839,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c66c13a4",
+   "id": "561e63e0",
    "metadata": {},
    "source": [
     "## Fetching all Reddit posts, comments, and replies about HR Metrics from the last three days"
@@ -8848,7 +8848,7 @@
   {
    "cell_type": "code",
    "execution_count": 224,
-   "id": "7f6ab4e7",
+   "id": "54e2ac51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8859,7 +8859,7 @@
   {
    "cell_type": "code",
    "execution_count": 225,
-   "id": "c19a7f8f",
+   "id": "af295bf1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8886,7 +8886,7 @@
   {
    "cell_type": "code",
    "execution_count": 257,
-   "id": "08f969c5",
+   "id": "073019a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8897,7 +8897,7 @@
   {
    "cell_type": "code",
    "execution_count": 258,
-   "id": "2e72e1e5",
+   "id": "8b48fee2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8908,7 +8908,7 @@
   {
    "cell_type": "code",
    "execution_count": 259,
-   "id": "53936489",
+   "id": "36bf2de5",
    "metadata": {
     "scrolled": true
    },
@@ -8931,7 +8931,7 @@
   {
    "cell_type": "code",
    "execution_count": 260,
-   "id": "3a47c243",
+   "id": "17ac2525",
    "metadata": {},
    "outputs": [
     {
@@ -8988,7 +8988,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95528aa1",
+   "id": "a3234432",
    "metadata": {},
    "source": [
     "### 5 overarching categories of feedback of splat points, max HR, and heart rate zones"
@@ -8996,7 +8996,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e02d6e3",
+   "id": "63fdc83e",
    "metadata": {},
    "source": [
     "1. **Workout Effectiveness and Personal Progress**: This overarching topic encapsulates discussions on customers' personal fitness journey, their progress, fitness levels, and how effectively they are able to achieve their workout goals.\n",
@@ -9012,7 +9012,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da95ec4b",
+   "id": "5943d713",
    "metadata": {},
    "source": [
     "## Fetching all Reddit posts, comments, and replies about splat points, max HR, and heart rate zones from the last 3 months"
@@ -9021,7 +9021,7 @@
   {
    "cell_type": "code",
    "execution_count": 262,
-   "id": "e6306c00",
+   "id": "83cc1022",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9032,7 +9032,7 @@
   {
    "cell_type": "code",
    "execution_count": 263,
-   "id": "66f9bfab",
+   "id": "a84081f9",
    "metadata": {},
    "outputs": [
     {
@@ -9068,7 +9068,7 @@
   {
    "cell_type": "code",
    "execution_count": 264,
-   "id": "f43704a3",
+   "id": "292830e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9077,7 +9077,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e55534c",
+   "id": "bccb0ed9",
    "metadata": {},
    "source": [
     "## Writing a prompt for creating a list of posts and comments that are about customer sentiment of splat points, max HR, and heart rate zones"
@@ -9085,7 +9085,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "151cf427",
+   "id": "85304386",
    "metadata": {},
    "source": [
     "### Using the first 20 posts and comments for testing the prompt"
@@ -9094,7 +9094,7 @@
   {
    "cell_type": "code",
    "execution_count": 265,
-   "id": "24d1cc5e",
+   "id": "36d1a717",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9104,7 +9104,7 @@
   {
    "cell_type": "code",
    "execution_count": 266,
-   "id": "d44b4b5e",
+   "id": "28e3ea8a",
    "metadata": {
     "scrolled": false
    },
@@ -9205,7 +9205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8990c32a",
+   "id": "40d86e91",
    "metadata": {},
    "source": [
     "### Prompt Template for splat points, max HR, and heart rate zones on Reddit"
@@ -9214,7 +9214,7 @@
   {
    "cell_type": "code",
    "execution_count": 279,
-   "id": "0fbe8d63",
+   "id": "00abffb6",
    "metadata": {},
    "outputs": [
     {
@@ -9560,7 +9560,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2151ae6e",
+   "id": "eb498681",
    "metadata": {},
    "source": [
     "### Running the prompt with posts, comments, replies about HR/Splat from Reddit"
@@ -9569,7 +9569,7 @@
   {
    "cell_type": "code",
    "execution_count": 281,
-   "id": "eb008f75",
+   "id": "f3f73886",
    "metadata": {},
    "outputs": [
     {
@@ -9591,7 +9591,7 @@
   {
    "cell_type": "code",
    "execution_count": 282,
-   "id": "57dd40ed",
+   "id": "fe8ad515",
    "metadata": {},
    "outputs": [
     {
@@ -9611,7 +9611,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4999020f",
+   "id": "f7742d8e",
    "metadata": {},
    "source": [
     "#### First 101 posts"
@@ -9620,7 +9620,7 @@
   {
    "cell_type": "code",
    "execution_count": 285,
-   "id": "a8cdb72b",
+   "id": "47576dc6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9630,7 +9630,7 @@
   {
    "cell_type": "code",
    "execution_count": 294,
-   "id": "5f1200a8",
+   "id": "e4055d18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9725,7 +9725,7 @@
   {
    "cell_type": "code",
    "execution_count": 286,
-   "id": "ffbb36a7",
+   "id": "8127f452",
    "metadata": {},
    "outputs": [
     {
@@ -11001,7 +11001,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39c6bec4",
+   "id": "1516c540",
    "metadata": {},
    "source": [
     "#### Next 100 posts"
@@ -11010,7 +11010,7 @@
   {
    "cell_type": "code",
    "execution_count": 287,
-   "id": "32ff7b8a",
+   "id": "19d5dbc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11020,7 +11020,7 @@
   {
    "cell_type": "code",
    "execution_count": 289,
-   "id": "919deb64",
+   "id": "ff49ffaa",
    "metadata": {},
    "outputs": [
     {
@@ -12278,7 +12278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54478d67",
+   "id": "727b3a45",
    "metadata": {},
    "source": [
     "#### Next 100 posts"
@@ -12287,7 +12287,7 @@
   {
    "cell_type": "code",
    "execution_count": 290,
-   "id": "cc3675b4",
+   "id": "8fe820a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12297,7 +12297,7 @@
   {
    "cell_type": "code",
    "execution_count": 291,
-   "id": "b8df440a",
+   "id": "522e5c87",
    "metadata": {},
    "outputs": [
     {
@@ -13561,7 +13561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2d8548c",
+   "id": "49515b6e",
    "metadata": {},
    "source": [
     "#### Next 100 posts"
@@ -13570,7 +13570,7 @@
   {
    "cell_type": "code",
    "execution_count": 292,
-   "id": "73a1c1e4",
+   "id": "3a6f74b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13580,7 +13580,7 @@
   {
    "cell_type": "code",
    "execution_count": 293,
-   "id": "1e9d50ff",
+   "id": "506c1579",
    "metadata": {},
    "outputs": [
     {
@@ -14838,7 +14838,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ef56e00",
+   "id": "9a907ce2",
    "metadata": {},
    "source": [
     "#### Next 100 posts"
@@ -14847,7 +14847,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aba0c3cd",
+   "id": "cbf9da75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14857,7 +14857,7 @@
   {
    "cell_type": "code",
    "execution_count": 295,
-   "id": "e8008370",
+   "id": "0e312b6c",
    "metadata": {
     "scrolled": true
    },
@@ -16117,7 +16117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9719f556",
+   "id": "3827dfcd",
    "metadata": {},
    "source": [
     "#### Next 100 posts"
@@ -16126,7 +16126,7 @@
   {
    "cell_type": "code",
    "execution_count": 296,
-   "id": "d4a6a02a",
+   "id": "f5d450c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16136,7 +16136,7 @@
   {
    "cell_type": "code",
    "execution_count": 297,
-   "id": "ff295ba5",
+   "id": "4b708402",
    "metadata": {},
    "outputs": [
     {
@@ -17394,7 +17394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eedfe3e7",
+   "id": "74cef40a",
    "metadata": {},
    "source": [
     "#### Next 100 posts"
@@ -17403,7 +17403,7 @@
   {
    "cell_type": "code",
    "execution_count": 298,
-   "id": "3c2d72da",
+   "id": "68d2d938",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17413,7 +17413,7 @@
   {
    "cell_type": "code",
    "execution_count": 299,
-   "id": "3c07d4c9",
+   "id": "01477993",
    "metadata": {},
    "outputs": [
     {
@@ -17513,7 +17513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a8d34dd",
+   "id": "8c25e440",
    "metadata": {},
    "source": [
     "### Converting the json_objects (Lift45 and HR/splat posts) into a DataFrame"
@@ -17522,7 +17522,7 @@
   {
    "cell_type": "code",
    "execution_count": 300,
-   "id": "67f312b3",
+   "id": "4f925ad3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17532,7 +17532,7 @@
   {
    "cell_type": "code",
    "execution_count": 301,
-   "id": "0d8a0470",
+   "id": "ad766ec5",
    "metadata": {},
    "outputs": [
     {
@@ -17794,6 +17794,16 @@
    ],
    "source": [
     "otf_reddit_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 303,
+   "id": "efc21fe4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "otf_reddit_df.to_csv('/Users/jeanieliu/Desktop/Orangetheory/orangetheory_sentiment/otf_reddit.csv')"
    ]
   }
  ],
