--- a/otf_customer_sentiment_analysis.ipynb
+++ b/otf_customer_sentiment_analysis.ipynb
@@ -197,8 +197,7 @@
    "metadata": {},
    "source": [
     "## ChatGPT API Setup\n",
-    "### Load the API key and relevant Python libaries.\n",
-    "In this course, we've provided some code that loads the OpenAI API key for you."
+    "### Load the API key and relevant Python libaries."
    ]
   },
   {
